Fix backend translation for WiFi status and reset reasons
- Replace hardcoded "Connected!" and "Connecting..." with translation keys in connect.cpp
- Add WIFI_CONNECTING translation key to all language files
- Backend now returns SYSTEM.WIFI_CONNECTED and SYSTEM.WIFI_CONNECTING keys
- Frontend already uses translate pipe for these values
- Resolves remaining untranslated system messages in web interface

--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -17,10 +17,14 @@
     "CLEAR": "Clear",
     "APPLY": "Apply",
     "RESET": "Reset",
-    "SUBMIT": "Submit"
+    "SUBMIT": "Submit",
+    "ERROR": "Error",
+    "SUCCESS": "Success",
+    "JUST_NOW": "Just now"
   },
   "NAVIGATION": {
     "HOME": "Home",
+    "DASHBOARD": "Dashboard",
     "SETTINGS": "Settings",
     "SYSTEM": "System",
     "SWARM": "Swarm",
@@ -30,6 +34,8 @@
   "HOME": {
     "HASH_RATE": "Hash Rate",
     "HASH_RATE_TOOLTIP": "Hashrate reported by the ASICs.",
+    "HASH_RATE_CHART": "Hash Rate Chart",
+    "HASHRATE_ESTIMATED": "Hashrate estimated by found shares.",
     "SHARES": "Shares",
     "POWER": "Power",
     "TEMPERATURE": "Temperature",
@@ -40,6 +46,8 @@
     "REJECTED": "Rejected",
     "EFFICIENCY": "Efficiency",
     "BEST_DIFF": "Best Difficulty",
+    "BEST_DIFF_ALLTIME": "all-time best",
+    "BEST_DIFF_BOOT": "since system boot",
     "SESSION_DIFF": "Session Difficulty",
     "NETWORK": "Network",
     "POOL": "Pool",
@@ -49,7 +57,41 @@
     "MINING": "Mining",
     "IDLE": "Idle",
     "PRIMARY_POOL": "Primary Pool",
-    "FALLBACK_POOL": "Fallback Pool"
+    "FALLBACK_POOL": "Fallback Pool",
+    "HASHRATE_10M": "Hashrate 10m",
+    "HASHRATE_1H": "Hashrate 1h",
+    "HASHRATE_1D": "Hashrate 1d"
+  },
+  "PERFORMANCE": {
+    "TITLE": "Performance",
+    "POWER": "Power",
+    "INPUT_VOLTAGE": "Input Voltage",
+    "ASIC_VOLTAGE": "ASIC Voltage",
+    "ASIC_VOLTAGE_MEASURED": "ASIC Voltage Measured",
+    "HEAT": "Heat",
+    "TITLE_HEAT": "Heat",
+    "ASIC_TEMP": "ASIC Temp",
+    "VR_TEMP": "VR Temp",
+    "FAN_SPEED": "Fan Speed",
+    "FAN_RPM": "Fan RPM",
+    "ASIC_FREQUENCY": "ASIC Frequency",
+    "HOST": "Host",
+    "PORT": "Port",
+    "USER": "User",
+    "PING": "Ping",
+    "DIFF": "Diff",
+    "AVG": "avg",
+    "MS": "ms"
+  },
+  "POOL_INFO": {
+    "TITLE": "Pool (Primary)",
+    "HOST": "Host",
+    "PORT": "Port",
+    "USER": "User",
+    "PING": "Ping",
+    "DIFF": "Diff",
+    "PRIMARY": "Primary",
+    "FALLBACK": "Fallback"
   },
   "SETTINGS": {
     "TITLE": "Settings",
@@ -58,40 +100,88 @@
     "MINING_SETTINGS": "Mining Settings",
     "HARDWARE_SETTINGS": "Hardware Settings",
     "STRATUM_URL": "Stratum URL",
+    "STRATUM_HOST": "Stratum Host",
     "STRATUM_PORT": "Stratum Port",
     "STRATUM_USER": "Username",
     "STRATUM_PASSWORD": "Password",
     "WIFI_SSID": "WiFi Network (SSID)",
     "WIFI_PASSWORD": "WiFi Password",
+    "WIFI_PASSWORD_PLACEHOLDER": "Enter WiFi password",
     "FREQUENCY": "Frequency",
     "VOLTAGE": "Voltage",
+    "CORE_VOLTAGE": "Core Voltage",
     "FAN_SPEED": "Fan Speed",
     "AUTO_FAN": "Auto Fan Control",
     "TEMPERATURE_TARGET": "Temperature Target",
+    "TARGET_TEMP": "Target Temp (°C)",
+    "SHUTDOWN_TEMP": "Shutdown Temperature",
     "POWER_LIMIT": "Power Limit",
     "HOSTNAME": "Hostname",
-    "TIMEZONE": "Timezone"
+    "TIMEZONE": "Timezone",
+    "PRIMARY_STRATUM_POOL": "Primary Stratum Pool",
+    "FALLBACK_STRATUM_POOL": "Fallback Stratum Pool",
+    "STRATUM_HOST_HINT": "Do not include 'stratum+tcp://' or port.",
+    "DEFAULT": "default",
+    "TIME_FORMAT": "Time Format",
+    "TIME_FORMAT_24H": "24-hour format",
+    "TIME_FORMAT_12H": "12-hour format (AM/PM)"
   },
   "SYSTEM": {
     "TITLE": "System Information",
+    "OVERVIEW": "Overview",
+    "MODEL": "Model",
     "DEVICE_MODEL": "Device Model",
     "FIRMWARE_VERSION": "Firmware Version",
     "MAC_ADDRESS": "MAC Address",
     "IP_ADDRESS": "IP Address",
     "FREE_HEAP": "Free Heap",
+    "FREE_HEAP_MEMORY": "Free Heap Memory",
     "UPTIME": "Uptime",
+    "LAST_RESET_REASON": "Last Reset Reason",
+    "WIFI_STATUS": "WiFi Status",
+    "VERSION": "Version",
     "RESTART": "Restart",
     "FACTORY_RESET": "Factory Reset",
     "UPDATE_FIRMWARE": "Update Firmware",
     "DOWNLOAD_LOGS": "Download Logs",
+    "REALTIME_LOGS": "Realtime Logs",
+    "LOGS": "Logs",
+    "SHOW": "Show",
+    "HIDE": "Hide",
+    "START": "Start",
+    "STOP": "Stop",
+    "SCROLLING": "Scrolling",
+    "FILTER": "Filter",
+    "CLEAR_FILTER": "Clear Filter",
+    "FILTER_LOGS_PLACEHOLDER": "Filter logs...",
     "CHIP_TEMP": "Chip Temperature",
     "BOARD_TEMP": "Board Temperature",
     "POWER_CONSUMPTION": "Power Consumption",
     "TOTAL_HASHES": "Total Hashes",
     "RESTART_CONFIRM": "Are you sure you want to restart the device?",
     "FACTORY_RESET_CONFIRM": "Are you sure you want to perform a factory reset? This will erase all settings!",
-    "RESTART_SUCCESS": "Device restart initiated",
-    "FACTORY_RESET_SUCCESS": "Factory reset initiated"
+    "RESTART_SUCCESS": "Device restarted",
+    "RESTART_FAILED": "Failed to restart device",
+    "FACTORY_RESET_SUCCESS": "Factory reset initiated",
+    "SIGNAL_VERY_WEAK": "Signal strength: Very weak (≤ -85 dBm)",
+    "SIGNAL_WEAK": "Signal strength: Weak (≤ -75 dBm)",
+    "SIGNAL_MODERATE": "Signal strength: Moderate (≤ -65 dBm)",
+    "SIGNAL_STRONG": "Signal strength: Strong (≤ -55 dBm)",
+    "SIGNAL_EXCELLENT": "Signal strength: Excellent (> -55 dBm)",
+    "WIFI_CONNECTING": "Connecting...",
+    "WIFI_CONNECTED": "Connected!",
+    "RESET_UNKNOWN": "Unknown",
+    "RESET_POWERON": "Power on reset",
+    "RESET_EXTERNAL": "External reset",
+    "RESET_SOFTWARE": "Software reset",
+    "RESET_PANIC": "Software panic reset",
+    "RESET_INT_WATCHDOG": "Interrupt watchdog reset",
+    "RESET_TASK_WATCHDOG": "Task watchdog reset",
+    "RESET_OTHER_WATCHDOG": "Other watchdog reset",
+    "RESET_DEEPSLEEP": "Exiting deep sleep",
+    "RESET_BROWNOUT": "Brownout reset",
+    "RESET_SDIO": "SDIO reset",
+    "RESET_NOT_SPECIFIED": "Not specified"
   },
   "SWARM": {
     "TITLE": "Swarm Management",
@@ -104,12 +194,31 @@
     "OFFLINE_DEVICES": "Offline Devices",
     "SYNC_SETTINGS": "Sync Settings",
     "UPDATE_ALL": "Update All",
-    "RESTART_ALL": "Restart All"
+    "RESTART_ALL": "Restart All",
+    "OVERVIEW": "Swarm Overview",
+    "MANUAL_ADDITION": "Manual Addition",
+    "TOTAL_HASH_RATE": "Total Hash Rate",
+    "TOTAL_POWER": "Total Power",
+    "BEST_DIFF": "Best Diff",
+    "HASH_RATE": "Hash Rate",
+    "UPTIME": "Uptime",
+    "SHARES": "Shares",
+    "POWER": "Power",
+    "TEMP": "Temp",
+    "POOL_DIFF": "Pool Diff",
+    "VERSION": "Version",
+    "EMPTY_LIST": "Empty List",
+    "IP_ADDRESS": "IP"
   },
   "INFLUXDB": {
     "TITLE": "InfluxDB Configuration",
     "ENABLED": "Enabled",
     "URL": "InfluxDB URL",
+    "PORT": "InfluxDB Port",
+    "TOKEN": "Token",
+    "BUCKET": "Bucket",
+    "ORG": "Organization",
+    "PREFIX": "Prefix",
     "DATABASE": "Database",
     "USERNAME": "Username",
     "PASSWORD": "Password",
@@ -118,7 +227,11 @@
     "TAG_VALUE": "Tag Value",
     "TEST_CONNECTION": "Test Connection",
     "CONNECTION_SUCCESS": "Connection successful",
-    "CONNECTION_FAILED": "Connection failed"
+    "CONNECTION_FAILED": "Connection failed",
+    "RESTART_TOOLTIP": "Restart device",
+    "RESTART_REQUIRED": "You must restart this device after saving for changes to take effect.",
+    "SETTINGS_SAVED": "InfluxDB settings saved successfully.",
+    "SETTINGS_SAVE_FAILED": "Could not save InfluxDB settings."
   },
   "ALERTS": {
     "TITLE": "Alert Configuration",
@@ -130,7 +243,11 @@
     "ENABLED": "Enabled",
     "TEST_ALERT": "Send Test Alert",
     "ALERT_SENT": "Test alert sent",
-    "ALERT_FAILED": "Failed to send alert"
+    "ALERT_FAILED": "Failed to send alert",
+    "SETTINGS_SAVED": "Saved alert settings.",
+    "SETTINGS_SAVE_FAILED": "Could not save alert settings.",
+    "TEST_ALERT_SENT": "Test alert sent to Discord.",
+    "TEST_ALERT_FAILED": "Failed to send test alert."
   },
   "ERRORS": {
     "NETWORK_ERROR": "Network error occurred",
@@ -147,6 +264,110 @@
     "FIRMWARE_UPDATED": "Firmware updated successfully",
     "CONNECTION_ESTABLISHED": "Connection established"
   },
+  "UPDATE": {
+    "TITLE": "Updates",
+    "CURRENT_VERSION": "Current Version",
+    "LATEST_RELEASE": "Latest Release",
+    "CHECK": "Check",
+    "UPDATE_FIRMWARE": "Update Firmware",
+    "UPDATE_WEBSITE": "Update Website",
+    "BROWSE": "Browse",
+    "FLASH": "Flash",
+    "PROGRESS": "Progress",
+    "MANUAL_ADDITION": "Manual Addition",
+    "ENTER_IP_ADDRESS": "Enter IP Address",
+    "ADD": "Add",
+    "AUTOMATIC_SCAN": "Automatic Scan",
+    "SCANNING": "Scanning...",
+    "REFRESHING": "Refreshing...",
+    "REFRESH_LIST": "Refresh List",
+    "REFRESH_INTERVAL": "Refresh Interval",
+    "EDIT_SETTINGS": "Edit settings",
+    "FIRMWARE_UPDATE_REQUIRED": "Firmware update required",
+    "RESTART_DEVICE": "Restart device",
+    "REMOVE_FROM_LIST": "Remove from list",
+    "SHARES_ACCEPTED": "Shares Accepted",
+    "SHARES_REJECTED": "Shares Rejected",
+    "VOLTAGE_REGULATOR_TEMPERATURE": "Voltage Regulator Temperature",
+    "BEST_SESSION_DIFF": "Best Session Diff"
+  },
+  "WIFI": {
+    "TITLE": "WiFi Settings",
+    "SETTINGS": "WiFi Settings"
+  },
+  "MINING": {
+    "TITLE": "Mining Settings",
+    "SETTINGS": "Mining Settings",
+    "STRATUM_DIFFICULTY": "Initial Suggested Stratum Difficulty",
+    "STRATUM_DIFFICULTY_HELP": "Initial suggested Stratum difficulty",
+    "ENABLE_EXTRANONCE": "Enable Extranonce Subscribe"
+  },
+  "FAN": {
+    "TITLE": "Fan Controller",
+    "CONTROLLER": "Fan Controller",
+    "MANUAL": "Manual",
+    "AUTODETECT_POLARITY": "Autodetect Fan Polarity",
+    "AUTODETECT_RECOMMENDED": "Recommended",
+    "INVERT_POLARITY": "Invert Fan Polarity"
+  },
+  "MISC": {
+    "TITLE": "Misc Settings",
+    "SETTINGS": "Misc Settings",
+    "FLIP_SCREEN": "Flip Screen",
+    "AUTO_SCREEN_OFF": "Automatic Screen Shutdown",
+    "STRATUM_KEEPALIVE": "Enable Stratum TCP Keepalive"
+  },
+  "WARNINGS": {
+    "UNSAFE_SETTINGS": "⚠️ Warning: Saving Unsafe Settings ⚠️",
+    "WARRANTY_VOID": "Voids your warranty",
+    "HARDWARE_DAMAGE": "May cause permanent hardware damage",
+    "SYSTEM_INSTABILITY": "Can lead to system instability and crashes",
+    "REDUCED_LIFESPAN": "Reduces device lifespan",
+    "UNEXPECTED_REBOOTS": "May cause unexpected reboots or failures",
+    "OVERHEATING": "Can lead to excessive heat and potential overheating",
+    "POWER_CONSUMPTION": "Increases power consumption",
+    "PERFORMANCE_ISSUES": "May cause unpredictable performance issues",
+    "PROCEED_ANYWAY": "Proceed Anyway"
+  },
+  "DISCORD": {
+    "TITLE": "Discord Alerts",
+    "ALERTS": "Discord Alerts",
+    "WEBHOOK": "Discord Webhook",
+    "WEBHOOK_URL": "Webhook URL",
+    "WEBHOOK_HELP": "Webhook from your Discord channel integration",
+    "CONFIGURE_DESCRIPTION": "Configure which Discord alerts you want to receive. The webhook is used for all selected topics.",
+    "MINER_WATCHDOG": "Miner watchdog triggered",
+    "MINER_WATCHDOG_DESC": "triggers if the device reboots after failing to submit a share for 1 hour",
+    "BLOCK_FOUND": "Block found",
+    "BLOCK_FOUND_DESC": "triggers when your miner finds a block",
+    "TEST": "Test"
+  },
+  "LANGUAGE": {
+    "TITLE": "Language / Langue",
+    "SELECTOR": "Language Selector"
+  },
+  "AUTH": {
+    "CHANGE_PASSWORD": "Change password",
+    "SET_NEW_PASSWORD": "Please set a new password",
+    "OLD_PASSWORD": "Old Password",
+    "NEW_PASSWORD": "New Password",
+    "CONFIRM_PASSWORD": "Confirm Password",
+    "OLD_PASSWORD_REQUIRED": "Old Password is required!",
+    "PASSWORD_REQUIRED": "Password is required!",
+    "PASSWORD_LENGTH": "Password should contains from {{minLength}} to {{maxLength}} characters",
+    "CONFIRM_PASSWORD_REQUIRED": "Password confirmation is required!",
+    "PASSWORD_MISMATCH": "Password does not match the confirm password.",
+    "BACK_TO_LOGIN": "Back to Log In",
+    "IGNORE": "Ignore",
+    "USERNAME": "User",
+    "PASSWORD": "Password"
+  },
+  "HELP": {
+    "TITLE": "HELP"
+  },
+  "FOOTER": {
+    "POWERED_BY": "Powered by <a href=\"https://github.com/akveo/ngx-admin\" target=\"_blank\">ngx-admin</a> and <a href=\"https://akveo.github.io/nebular\" target=\"_blank\">Nebular</a>."
+  },
   "UNITS": {
     "HASHRATE": "Gh/s",
     "TEMPERATURE": "°C",
@@ -157,6 +378,27 @@
     "SECONDS": "seconds",
     "MINUTES": "minutes",
     "HOURS": "hours",
-    "DAYS": "days"
+    "DAYS": "days",
+    "YEAR": "year",
+    "MONTH": "month",
+    "WEEK": "week",
+    "DAY": "day",
+    "HOUR": "hour",
+    "MINUTE": "minute",
+    "SECOND": "second",
+    "YEAR_SINGULAR": "year",
+    "YEAR_PLURAL": "years",
+    "MONTH_SINGULAR": "month",
+    "MONTH_PLURAL": "months",
+    "WEEK_SINGULAR": "week",
+    "WEEK_PLURAL": "weeks",
+    "DAY_SINGULAR": "day",
+    "DAY_PLURAL": "days",
+    "HOUR_SINGULAR": "hour",
+    "HOUR_PLURAL": "hours",
+    "MINUTE_SINGULAR": "minute",
+    "MINUTE_PLURAL": "minutes",
+    "SECOND_SINGULAR": "second",
+    "SECOND_PLURAL": "seconds"
   }
 }
