--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -17,10 +17,14 @@
     "CLEAR": "Effacer",
     "APPLY": "Appliquer",
     "RESET": "Réinitialiser",
-    "SUBMIT": "Soumettre"
+    "SUBMIT": "Soumettre",
+    "ERROR": "Erreur",
+    "SUCCESS": "Succès",
+    "JUST_NOW": "À l'instant"
   },
   "NAVIGATION": {
     "HOME": "Accueil",
+    "DASHBOARD": "Tableau de Bord",
     "SETTINGS": "Paramètres",
     "SYSTEM": "Système",
     "SWARM": "Essaim",
@@ -30,6 +34,8 @@
   "HOME": {
     "HASH_RATE": "Taux de Hachage",
     "HASH_RATE_TOOLTIP": "Taux de hachage rapporté par les ASICs.",
+    "HASH_RATE_CHART": "Graphique du Taux de Hachage",
+    "HASHRATE_ESTIMATED": "Taux de hachage estimé par les parts trouvées.",
     "SHARES": "Parts",
     "POWER": "Puissance",
     "TEMPERATURE": "Température",
@@ -40,6 +46,8 @@
     "REJECTED": "Rejetées",
     "EFFICIENCY": "Efficacité",
     "BEST_DIFF": "Meilleure Difficulté",
+    "BEST_DIFF_ALLTIME": "record absolu",
+    "BEST_DIFF_BOOT": "depuis le démarrage système",
     "SESSION_DIFF": "Difficulté de Session",
     "NETWORK": "Réseau",
     "POOL": "Pool",
@@ -49,7 +57,41 @@
     "MINING": "Minage",
     "IDLE": "Inactif",
     "PRIMARY_POOL": "Pool Primaire",
-    "FALLBACK_POOL": "Pool de Secours"
+    "FALLBACK_POOL": "Pool de Secours",
+    "HASHRATE_10M": "Hashrate 10min",
+    "HASHRATE_1H": "Hashrate 1h",
+    "HASHRATE_1D": "Hashrate 1j"
+  },
+  "PERFORMANCE": {
+    "TITLE": "Performance",
+    "POWER": "Puissance",
+    "INPUT_VOLTAGE": "Tension d'Entrée",
+    "ASIC_VOLTAGE": "Tension ASIC",
+    "ASIC_VOLTAGE_MEASURED": "Tension ASIC Mesurée",
+    "HEAT": "Chaleur",
+    "TITLE_HEAT": "Chaleur",
+    "ASIC_TEMP": "Temp ASIC",
+    "VR_TEMP": "Temp VR",
+    "FAN_SPEED": "Vitesse Ventilateur",
+    "FAN_RPM": "RPM Ventilateur",
+    "ASIC_FREQUENCY": "Fréquence ASIC",
+    "HOST": "Hôte",
+    "PORT": "Port",
+    "USER": "Utilisateur",
+    "PING": "Ping",
+    "DIFF": "Difficulté",
+    "AVG": "moy",
+    "MS": "ms"
+  },
+  "POOL_INFO": {
+    "TITLE": "Pool",
+    "HOST": "Hôte",
+    "PORT": "Port",
+    "USER": "Utilisateur",
+    "PING": "Ping",
+    "DIFF": "Difficulté",
+    "PRIMARY": "Primaire",
+    "FALLBACK": "Secours"
   },
   "SETTINGS": {
     "TITLE": "Paramètres",
@@ -58,40 +100,88 @@
     "MINING_SETTINGS": "Paramètres de Minage",
     "HARDWARE_SETTINGS": "Paramètres Matériel",
     "STRATUM_URL": "URL Stratum",
+    "STRATUM_HOST": "Hôte Stratum",
     "STRATUM_PORT": "Port Stratum",
     "STRATUM_USER": "Nom d'utilisateur",
     "STRATUM_PASSWORD": "Mot de passe",
     "WIFI_SSID": "Réseau WiFi (SSID)",
     "WIFI_PASSWORD": "Mot de passe WiFi",
+    "WIFI_PASSWORD_PLACEHOLDER": "Entrez le mot de passe WiFi",
     "FREQUENCY": "Fréquence",
     "VOLTAGE": "Tension",
+    "CORE_VOLTAGE": "Tension du Cœur",
     "FAN_SPEED": "Vitesse du Ventilateur",
     "AUTO_FAN": "Contrôle Auto du Ventilateur",
     "TEMPERATURE_TARGET": "Température Cible",
+    "TARGET_TEMP": "Temp Cible (°C)",
+    "SHUTDOWN_TEMP": "Température d'Arrêt",
     "POWER_LIMIT": "Limite de Puissance",
     "HOSTNAME": "Nom d'hôte",
-    "TIMEZONE": "Fuseau Horaire"
+    "TIMEZONE": "Fuseau Horaire",
+    "PRIMARY_STRATUM_POOL": "Pool Stratum Primaire",
+    "FALLBACK_STRATUM_POOL": "Pool Stratum de Secours",
+    "STRATUM_HOST_HINT": "N'incluez pas 'stratum+tcp://' ou le port.",
+    "DEFAULT": "défaut",
+    "TIME_FORMAT": "Format d'Heure",
+    "TIME_FORMAT_24H": "Format 24 heures",
+    "TIME_FORMAT_12H": "Format 12 heures (AM/PM)"
   },
   "SYSTEM": {
     "TITLE": "Informations Système",
+    "OVERVIEW": "Aperçu",
+    "MODEL": "Modèle",
     "DEVICE_MODEL": "Modèle d'Appareil",
     "FIRMWARE_VERSION": "Version du Firmware",
     "MAC_ADDRESS": "Adresse MAC",
     "IP_ADDRESS": "Adresse IP",
     "FREE_HEAP": "Mémoire Libre",
+    "FREE_HEAP_MEMORY": "Mémoire Heap Libre",
     "UPTIME": "Temps de Fonctionnement",
+    "LAST_RESET_REASON": "Dernière Raison de Redémarrage",
+    "WIFI_STATUS": "État WiFi",
+    "VERSION": "Version",
     "RESTART": "Redémarrer",
     "FACTORY_RESET": "Réinitialisation d'Usine",
     "UPDATE_FIRMWARE": "Mettre à Jour le Firmware",
     "DOWNLOAD_LOGS": "Télécharger les Logs",
+    "REALTIME_LOGS": "Logs Temps Réel",
+    "LOGS": "Logs",
+    "SHOW": "Afficher",
+    "HIDE": "Masquer",
+    "START": "Démarrer",
+    "STOP": "Arrêter",
+    "SCROLLING": "Défilement",
+    "FILTER": "Filtrer",
+    "CLEAR_FILTER": "Effacer le Filtre",
+    "FILTER_LOGS_PLACEHOLDER": "Filtrer les logs...",
     "CHIP_TEMP": "Température de Puce",
     "BOARD_TEMP": "Température de Carte",
     "POWER_CONSUMPTION": "Consommation Électrique",
     "TOTAL_HASHES": "Total de Hashes",
     "RESTART_CONFIRM": "Êtes-vous sûr de vouloir redémarrer l'appareil ?",
     "FACTORY_RESET_CONFIRM": "Êtes-vous sûr de vouloir effectuer une réinitialisation d'usine ? Cela effacera tous les paramètres !",
-    "RESTART_SUCCESS": "Redémarrage de l'appareil initié",
-    "FACTORY_RESET_SUCCESS": "Réinitialisation d'usine initiée"
+    "RESTART_SUCCESS": "Appareil redémarré",
+    "RESTART_FAILED": "Échec du redémarrage de l'appareil",
+    "FACTORY_RESET_SUCCESS": "Réinitialisation d'usine initiée",
+    "SIGNAL_VERY_WEAK": "Force du signal : Très faible (≤ -85 dBm)",
+    "SIGNAL_WEAK": "Force du signal : Faible (≤ -75 dBm)",
+    "SIGNAL_MODERATE": "Force du signal : Modérée (≤ -65 dBm)",
+    "SIGNAL_STRONG": "Force du signal : Forte (≤ -55 dBm)",
+    "SIGNAL_EXCELLENT": "Force du signal : Excellente (> -55 dBm)",
+    "WIFI_CONNECTING": "Connexion en cours...",
+    "WIFI_CONNECTED": "Connecté !",
+    "RESET_UNKNOWN": "Inconnu",
+    "RESET_POWERON": "Redémarrage par mise sous tension",
+    "RESET_EXTERNAL": "Redémarrage externe",
+    "RESET_SOFTWARE": "Redémarrage logiciel",
+    "RESET_PANIC": "Redémarrage par panique logicielle",
+    "RESET_INT_WATCHDOG": "Redémarrage par watchdog d'interruption",
+    "RESET_TASK_WATCHDOG": "Redémarrage par watchdog de tâche",
+    "RESET_OTHER_WATCHDOG": "Autre redémarrage par watchdog",
+    "RESET_DEEPSLEEP": "Sortie de veille profonde",
+    "RESET_BROWNOUT": "Redémarrage par chute de tension",
+    "RESET_SDIO": "Redémarrage SDIO",
+    "RESET_NOT_SPECIFIED": "Non spécifié"
   },
   "SWARM": {
     "TITLE": "Gestion d'Essaim",
@@ -104,12 +194,31 @@
     "OFFLINE_DEVICES": "Appareils Hors Ligne",
     "SYNC_SETTINGS": "Synchroniser les Paramètres",
     "UPDATE_ALL": "Mettre à Jour Tous",
-    "RESTART_ALL": "Redémarrer Tous"
+    "RESTART_ALL": "Redémarrer Tous",
+    "OVERVIEW": "Aperçu de l'Essaim",
+    "MANUAL_ADDITION": "Ajout Manuel",
+    "TOTAL_HASH_RATE": "Taux de Hachage Total",
+    "TOTAL_POWER": "Puissance Totale",
+    "BEST_DIFF": "Meilleure Difficulté",
+    "HASH_RATE": "Taux de Hachage",
+    "UPTIME": "Temps de Fonctionnement",
+    "SHARES": "Parts",
+    "POWER": "Puissance",
+    "TEMP": "Temp",
+    "POOL_DIFF": "Difficulté Pool",
+    "VERSION": "Version",
+    "EMPTY_LIST": "Liste Vide",
+    "IP_ADDRESS": "IP"
   },
   "INFLUXDB": {
     "TITLE": "Configuration InfluxDB",
     "ENABLED": "Activé",
     "URL": "URL InfluxDB",
+    "PORT": "Port InfluxDB",
+    "TOKEN": "Token",
+    "BUCKET": "Bucket",
+    "ORG": "Organisation",
+    "PREFIX": "Préfixe",
     "DATABASE": "Base de Données",
     "USERNAME": "Nom d'utilisateur",
     "PASSWORD": "Mot de passe",
@@ -118,7 +227,11 @@
     "TAG_VALUE": "Valeur du Tag",
     "TEST_CONNECTION": "Tester la Connexion",
     "CONNECTION_SUCCESS": "Connexion réussie",
-    "CONNECTION_FAILED": "Connexion échouée"
+    "CONNECTION_FAILED": "Connexion échouée",
+    "RESTART_TOOLTIP": "Redémarrer l'appareil",
+    "RESTART_REQUIRED": "Vous devez redémarrer cet appareil après sauvegarde pour que les changements prennent effet.",
+    "SETTINGS_SAVED": "Paramètres InfluxDB sauvegardés avec succès.",
+    "SETTINGS_SAVE_FAILED": "Impossible de sauvegarder les paramètres InfluxDB."
   },
   "ALERTS": {
     "TITLE": "Configuration des Alertes",
@@ -130,7 +243,11 @@
     "ENABLED": "Activé",
     "TEST_ALERT": "Envoyer une Alerte de Test",
     "ALERT_SENT": "Alerte de test envoyée",
-    "ALERT_FAILED": "Échec de l'envoi de l'alerte"
+    "ALERT_FAILED": "Échec de l'envoi de l'alerte",
+    "SETTINGS_SAVED": "Paramètres d'alerte sauvegardés.",
+    "SETTINGS_SAVE_FAILED": "Impossible de sauvegarder les paramètres d'alerte.",
+    "TEST_ALERT_SENT": "Alerte test envoyée sur Discord.",
+    "TEST_ALERT_FAILED": "Échec d'envoi de l'alerte test."
   },
   "ERRORS": {
     "NETWORK_ERROR": "Erreur réseau survenue",
@@ -147,6 +264,110 @@
     "FIRMWARE_UPDATED": "Firmware mis à jour avec succès",
     "CONNECTION_ESTABLISHED": "Connexion établie"
   },
+  "UPDATE": {
+    "TITLE": "Mises à jour",
+    "CURRENT_VERSION": "Version Actuelle",
+    "LATEST_RELEASE": "Dernière Version",
+    "CHECK": "Vérifier",
+    "UPDATE_FIRMWARE": "Mettre à jour le Firmware",
+    "UPDATE_WEBSITE": "Mettre à jour le Site Web",
+    "BROWSE": "Parcourir",
+    "FLASH": "Flasher",
+    "PROGRESS": "Progression",
+    "MANUAL_ADDITION": "Ajout Manuel",
+    "ENTER_IP_ADDRESS": "Entrer l'adresse IP",
+    "ADD": "Ajouter",
+    "AUTOMATIC_SCAN": "Scan Automatique",
+    "SCANNING": "Scan en cours...",
+    "REFRESHING": "Actualisation...",
+    "REFRESH_LIST": "Actualiser la Liste",
+    "REFRESH_INTERVAL": "Intervalle d'Actualisation",
+    "EDIT_SETTINGS": "Modifier les paramètres",
+    "FIRMWARE_UPDATE_REQUIRED": "Mise à jour firmware requise",
+    "RESTART_DEVICE": "Redémarrer l'appareil",
+    "REMOVE_FROM_LIST": "Retirer de la liste",
+    "SHARES_ACCEPTED": "Parts Acceptées",
+    "SHARES_REJECTED": "Parts Rejetées",
+    "VOLTAGE_REGULATOR_TEMPERATURE": "Température du Régulateur de Tension",
+    "BEST_SESSION_DIFF": "Meilleure Difficulté de Session"
+  },
+  "WIFI": {
+    "TITLE": "Paramètres WiFi",
+    "SETTINGS": "Paramètres WiFi"
+  },
+  "MINING": {
+    "TITLE": "Paramètres de Minage",
+    "SETTINGS": "Paramètres de Minage",
+    "STRATUM_DIFFICULTY": "Difficulté Stratum Suggérée",
+    "STRATUM_DIFFICULTY_HELP": "Difficulté Stratum initiale suggérée",
+    "ENABLE_EXTRANONCE": "Activer Extranonce Subscribe"
+  },
+  "FAN": {
+    "TITLE": "Contrôleur de Ventilateur",
+    "CONTROLLER": "Contrôleur de Ventilateur",
+    "MANUAL": "Manuel",
+    "AUTODETECT_POLARITY": "Détection Auto de la Polarité",
+    "AUTODETECT_RECOMMENDED": "Recommandé",
+    "INVERT_POLARITY": "Inverser la Polarité"
+  },
+  "MISC": {
+    "TITLE": "Paramètres Divers",
+    "SETTINGS": "Paramètres Divers",
+    "FLIP_SCREEN": "Retourner l'Écran",
+    "AUTO_SCREEN_OFF": "Extinction Automatique de l'Écran",
+    "STRATUM_KEEPALIVE": "Activer Stratum TCP Keepalive"
+  },
+  "WARNINGS": {
+    "UNSAFE_SETTINGS": "⚠️ Attention: Sauvegarde de Paramètres Dangereux ⚠️",
+    "WARRANTY_VOID": "Annule votre garantie",
+    "HARDWARE_DAMAGE": "Peut causer des dommages matériels permanents",
+    "SYSTEM_INSTABILITY": "Peut entraîner une instabilité système et des plantages",
+    "REDUCED_LIFESPAN": "Réduit la durée de vie de l'appareil",
+    "UNEXPECTED_REBOOTS": "Peut causer des redémarrages ou pannes inattendus",
+    "OVERHEATING": "Peut entraîner une chaleur excessive et une surchauffe potentielle",
+    "POWER_CONSUMPTION": "Augmente la consommation électrique",
+    "PERFORMANCE_ISSUES": "Peut causer des problèmes de performance imprévisibles",
+    "PROCEED_ANYWAY": "Continuer Quand Même"
+  },
+  "DISCORD": {
+    "TITLE": "Alertes Discord",
+    "ALERTS": "Alertes Discord",
+    "WEBHOOK": "Webhook Discord",
+    "WEBHOOK_URL": "URL Webhook",
+    "WEBHOOK_HELP": "Webhook de l'intégration de votre canal Discord",
+    "CONFIGURE_DESCRIPTION": "Configurez les alertes Discord que vous souhaitez recevoir. Le webhook est utilisé pour tous les sujets sélectionnés.",
+    "MINER_WATCHDOG": "Surveillance du mineur déclenchée",
+    "MINER_WATCHDOG_DESC": "se déclenche si l'appareil redémarre après avoir échoué à soumettre une part pendant 1 heure",
+    "BLOCK_FOUND": "Bloc trouvé",
+    "BLOCK_FOUND_DESC": "se déclenche quand votre mineur trouve un bloc",
+    "TEST": "Test"
+  },
+  "LANGUAGE": {
+    "TITLE": "Langue / Language",
+    "SELECTOR": "Sélecteur de Langue"
+  },
+  "AUTH": {
+    "CHANGE_PASSWORD": "Changer le mot de passe",
+    "SET_NEW_PASSWORD": "Veuillez définir un nouveau mot de passe",
+    "OLD_PASSWORD": "Ancien Mot de Passe",
+    "NEW_PASSWORD": "Nouveau Mot de Passe",
+    "CONFIRM_PASSWORD": "Confirmer le Mot de Passe",
+    "OLD_PASSWORD_REQUIRED": "L'ancien mot de passe est requis !",
+    "PASSWORD_REQUIRED": "Le mot de passe est requis !",
+    "PASSWORD_LENGTH": "Le mot de passe doit contenir de {{minLength}} à {{maxLength}} caractères",
+    "CONFIRM_PASSWORD_REQUIRED": "La confirmation du mot de passe est requise !",
+    "PASSWORD_MISMATCH": "Le mot de passe ne correspond pas à la confirmation.",
+    "BACK_TO_LOGIN": "Retour à la Connexion",
+    "IGNORE": "Ignorer",
+    "USERNAME": "Utilisateur",
+    "PASSWORD": "Mot de passe"
+  },
+  "HELP": {
+    "TITLE": "AIDE"
+  },
+  "FOOTER": {
+    "POWERED_BY": "Propulsé par <a href=\"https://github.com/akveo/ngx-admin\" target=\"_blank\">ngx-admin</a> et <a href=\"https://akveo.github.io/nebular\" target=\"_blank\">Nebular</a>."
+  },
   "UNITS": {
     "HASHRATE": "Gh/s",
     "TEMPERATURE": "°C",
@@ -157,6 +378,27 @@
     "SECONDS": "secondes",
     "MINUTES": "minutes",
     "HOURS": "heures",
-    "DAYS": "jours"
+    "DAYS": "jours",
+    "YEAR": "année",
+    "MONTH": "mois",
+    "WEEK": "semaine",
+    "DAY": "jour",
+    "HOUR": "heure",
+    "MINUTE": "minute",
+    "SECOND": "seconde",
+    "YEAR_SINGULAR": "année",
+    "YEAR_PLURAL": "années",
+    "MONTH_SINGULAR": "mois",
+    "MONTH_PLURAL": "mois",
+    "WEEK_SINGULAR": "semaine",
+    "WEEK_PLURAL": "semaines",
+    "DAY_SINGULAR": "jour",
+    "DAY_PLURAL": "jours",
+    "HOUR_SINGULAR": "heure",
+    "HOUR_PLURAL": "heures",
+    "MINUTE_SINGULAR": "minute",
+    "MINUTE_PLURAL": "minutes",
+    "SECOND_SINGULAR": "seconde",
+    "SECOND_PLURAL": "secondes"
   }
 }
