Add direct GitHub OTA update system with real-time progress tracking
Implements a complete OTA update solution that allows users to install firmware directly from GitHub releases with one click, bypassing CORS restrictions and providing real-time feedback.

Backend changes:
- Add POST /api/system/OTA/github endpoint in handler_ota.cpp
- Implement backend proxy that downloads firmware from GitHub and streams directly to ESP32 flash partition
- Use esp_https_ota API for automatic redirect handling and SSL/TLS support
- Optimize HTTP buffer sizes (8192 bytes) to handle large firmware files (2.8MB+)
- Add progress logging every 5% via ESP_LOGI for WebSocket broadcasting
- Include esp_https_ota component in CMakeLists.txt dependencies

Frontend enhancements:
- Add automatic version checking on settings page load
- Implement semantic version comparison (e.g., v1.0.33 vs v1.0.34)
- Display color-coded status badges: green (up-to-date), orange (update available), red (outdated)
- Show release information with changelog parsing (markdown to HTML)
- Add one-click "Install from GitHub" button with device model auto-detection
- Subscribe to WebSocket for real-time OTA progress updates (0%, 5%, 10%, ..., 100%)
- Implement automatic page refresh after device reboot using polling mechanism
- Display reboot progress counter (attempt X/60) with timeout handling

UI improvements:
- Replace modal overlay with inline progress indicators
- Show status messages: "Initializing...", "Downloading and installing: X%", "Rebooting..."
- Add device model normalization (γ→Gamma, preserve + characters)
- Filter out factory builds from automatic file selection
- Maintain manual file upload as fallback option

Internationalization:
- Add complete translations for UPDATE section (FR, EN, ES, DE)
- Translate all toast notifications (success, error, warnings)
- Support dynamic translation keys for update status badges
- Translate progress messages and reboot status indicators

Technical details:
- No 

--- a/main/http_server/axe-os/src/assets/i18n/es.json
+++ b/main/http_server/axe-os/src/assets/i18n/es.json
@@ -289,7 +289,44 @@
     "SHARES_ACCEPTED": "Acciones Aceptadas",
     "SHARES_REJECTED": "Acciones Rechazadas",
     "VOLTAGE_REGULATOR_TEMPERATURE": "Temperatura del Regulador de Voltaje",
-    "BEST_SESSION_DIFF": "Mejor Dificultad de Sesión"
+    "BEST_SESSION_DIFF": "Mejor Dificultad de Sesión",
+    "VERSION_INFO": "Información de Versión",
+    "PUBLISHED": "Publicado",
+    "STATUS_UP_TO_DATE": "Actualizado",
+    "STATUS_UPDATE_AVAILABLE": "Actualización disponible",
+    "STATUS_OUTDATED": "Obsoleto",
+    "STATUS_UNKNOWN": "Desconocido",
+    "SHOW_CHANGELOG": "Mostrar Registro de Cambios",
+    "HIDE_CHANGELOG": "Ocultar Registro de Cambios",
+    "DIRECT_FROM_GITHUB": "Directamente desde GitHub",
+    "INSTALL_FROM_GITHUB": "Instalar desde GitHub",
+    "MANUAL_FILE": "Archivo Manual",
+    "STEP_DOWNLOADING": "Descargando",
+    "STEP_UPLOADING": "Subiendo",
+    "STEP_FLASHING": "Flasheando",
+    "AVAILABLE_FILES": "Archivos Disponibles",
+    "INITIALIZING": "Inicializando...",
+    "DOWNLOADING_AND_INSTALLING": "Descargando e instalando",
+    "INSTALLATION_COMPLETE": "Instalación completa, reiniciando...",
+    "REBOOTING": "Reiniciando...",
+    "REBOOT_COMPLETE": "Reinicio completo, recargando página...",
+    "REBOOT_TAKING_LONG": "El reinicio está tardando más de lo esperado. Por favor, actualice manualmente."
+  },
+  "TOAST": {
+    "SUCCESS": "Éxito",
+    "ERROR": "Error",
+    "WARNING": "Advertencia",
+    "SAVED": "Guardado",
+    "COULD_NOT_SAVE": "No se pudo guardar",
+    "NO_FILE_SELECTED": "Ningún archivo seleccionado",
+    "INCORRECT_FILE": "Archivo incorrecto, esperado",
+    "FIRMWARE_UPDATED": "Firmware actualizado con éxito",
+    "WEBSITE_UPDATED": "Interfaz actualizada con éxito",
+    "UPLOAD_FAILED": "Error al cargar",
+    "NO_RELEASE_INFO": "No hay información de versión disponible",
+    "UPDATE_FAILED": "Error en la actualización",
+    "DEVICE_RESTARTED": "Dispositivo reiniciado",
+    "RESTART_FAILED": "Error al reiniciar el dispositivo"
   },
   "WIFI": {
     "TITLE": "Configuración WiFi",
